k8s/overlays/aws/patch-delete-incluster-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minirtos-postgres
  namespace: minirtos
$patch: delete

---
apiVersion: v1
kind: Service
metadata:
  name: minirtos-postgres
  namespace: minirtos
$patch: delete
