k8s/overlays/aws/minirtos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minirtos-ingress
  namespace: minirtos
  labels:
    app.kubernetes.io/name: minirtos-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:058416978707:certificate/c29d32c9-25b5-45a3-bc38-7a9c9c6779be
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: app.minirtos.biz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: minirtos-backend
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minirtos-frontend
                port:
                  number: 80
